# DummySnapshotDemo

./: CMakeLists.txt
qml/: Main.qml
src/: Dummy.cpp  Dummy.h  ResetManager.cpp  ResetManager.h  Resettable.h  SnapshotManager.cpp  SnapshotManager.h  main.cpp
